--- a/src/pages/about/policies/covid-policy/index.astro
+++ b/src/pages/about/policies/covid-policy/index.astro
@@ -67,8 +67,7 @@ const checklist = [
 >
   <section class="section hero">
     <div class="container hero__content policy-hero__content">
-      <span class="tag">Policy Center</span>
-      <h1>Re-opening Safety Measures</h1>
+      <h1>COVID Safety Policy</h1>
       <p>
         Publish Date: 02/15/2021. These guidelines outline how we protect students and staff during in-person classes, from health screenings to classroom ventilation.
       </p>
